Refactor RoomValidator
